# harness-core

./: .gitignore  pyproject.toml
src/agent_harness_core/: __init__.py  agent_loop.py  cli.py  llm.py  prompt.py  tools.py
