[project]
name = "agent-harness-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "darven", email = "1926248272@qq.com" }
]
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.25.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
